tests/machine/x/go/group_by_having.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_having.go:14:14: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:15:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:19:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:23:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:27:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:31:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:35:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:39:3: undefined: PeopleItem
../../../tests/machine/x/go/group_by_having.go:44:18: undefined: Big
../../../tests/machine/x/go/group_by_having.go:58:16: undefined: Big
../../../tests/machine/x/go/group_by_having.go:58:16: too many errors

1: //go:build ignore
